# BaroboLink2

./: .gitmodules  BaroboFirmwareUpdate.cpp  BaroboFirmwareUpdate.h  BaroboLink.cpp  BaroboLink.desktop  BaroboLink.h  BaroboLink.nsi  BaroboLinkbotDriver.nsi  Barobo_Linkbot_Driver.inf  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile_win32  MobotFirmwareUpdate.cpp  MobotFirmwareUpdate.h  RecordMobot.cpp  RecordMobot.h  RoboMancer.cpp  RoboMancer.h  RobotManager.cpp  RobotManager.h  barobo_linkbot_driver.cat  buttons.x.h  commsHandler.cpp  config.h.in  configFile.cpp  configFile.h  configure  configure.ac  connectDialog.cpp  connectDongleDialog.cpp  controlDialog.cpp  controlDialog.h  gaits.x.h  libstkcomms.cpp  libstkcomms.hpp  mobot++_wrapper.cpp  programDialog.cpp  scanMobotsDialog.cpp  (+3 more)
apple/BaroboLink/: barobo-logo.icns
apple/BaroboLink/BaroboLink/: BAROBOAppDelegate.h  BAROBOAppDelegate.m  BaroboLink-Info.plist  BaroboLink-Prefix.pch  main.m
apple/BaroboLink/BaroboLink.xcodeproj/: project.pbxproj
apple/BaroboLink/BaroboLink.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
apple/BaroboLink/BaroboLink.xcodeproj/project.xcworkspace/xcuserdata/adamruggles.xcuserdatad/: UserInterfaceState.xcuserstate
apple/BaroboLink/BaroboLink.xcodeproj/xcuserdata/adamruggles.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
apple/BaroboLink/BaroboLink.xcodeproj/xcuserdata/adamruggles.xcuserdatad/xcschemes/: BaroboLink Release.xcscheme  BaroboLink.xcscheme  xcschememanagement.plist
apple/BaroboLink/BaroboLink/Source/Models/: BAROBORobot.h  BAROBORobot.m
apple/BaroboLink/BaroboLink/Source/ViewControllers/: BAROBOControlViewController.h  BAROBOControlViewController.m  BAROBORobotTableViewController.h  BAROBORobotTableViewController.m
apple/BaroboLink/BaroboLink/en.lproj/: Credits.rtf  MainMenu.xib
apple/BaroboLink/BaroboLinkTests/: BaroboLinkTests-Info.plist  BaroboLinkTests.h  BaroboLinkTests.m
apple/libbarobo/libbarobo.xcodeproj/: project.pbxproj
apple/libbarobo/libbarobo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
apple/libbarobo/libbarobo.xcodeproj/project.xcworkspace/xcuserdata/adamruggles.xcuserdatad/: UserInterfaceState.xcuserstate
apple/libbarobo/libbarobo.xcodeproj/xcuserdata/adamruggles.xcuserdatad/xcschemes/: libbarobo.xcscheme  xcschememanagement.plist
assets/interface/: interface.glade
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
hexfiles/: linkbot_68.hex  linkbot_75.hex  linkbot_76.hex  linkbot_latest.hex  mobot-il.hex  rev3.hex  rev3_safe.hex  rev4.hex
interface/: interface.glade  mobotfirmwareupdateinterface.glade  rev3.hex  rev4.hex
libstkcomms/: CMakeLists.txt  libstkcomms++.cpp  libstkcomms.cpp  libstkcomms.h  libstkcomms.hpp
src/: BaroboFirmwareUpdate.cpp  BaroboLink.nsi  BaroboLink.rc  BaroboLink.res  Makefile.am  RecordMobot.cpp  RecordMobot.h  config.h.in  configFile.cpp  configFile.h  configure.ac  controlDialog.h  programDialog.cpp  thread_macros.h  updateFirmware.cpp
